# cpp_learning_examples

./: .clang-format  .clangd  .gitignore  BUILD_NOTES.md  CMakeLists.txt  LICENSE  README.md  compile.sh  compile_commands.json
cmake/: vcpkg_and_doctest.cmake  vcpkg_helpers.cmake
csrc/: CMakeLists.txt  common.h  heap_only.cpp  init.cpp  stack_only.cpp
csrc/algo/: CMakeLists.txt  QUICKSTART.md  README.md  multi_tree.hpp  multi_tree_back.back  multi_tree_example.cpp
csrc/basic/: CMakeLists.txt  QUICKREF_variadic.md  README_friend_example.md  README_variadic_examples.md  any_example.cpp  friend_example_demo.cpp  function_examples.cpp  variadic_examples.cpp  variadic_using.cpp  virtural_table.cpp
csrc/concurrent/: CMakeLists.txt  gemm_demo.cpp  gemm_learning.cpp  gemm_learning.h
csrc/design_patterns/: CMakeLists.txt
csrc/design_patterns/template_method/: CMakeLists.txt  crtp.cpp  nvi.cpp  policy.cpp  private_virtual.cpp  static_dynamic.cpp  static_dynamic_2.cpp  static_dynamic_3.cpp  template_method.cpp  template_method_crtp.cpp  template_method_nvi.cpp  template_method_policy.cpp  template_method_private_virtual.cpp  template_method_static_dynamic.cpp  template_method_type_erasure.cpp  type_erasure.cpp  type_erasure_2.cpp  type_erasure_3.cpp
csrc/linux_program/: CMakeLists.txt
csrc/linux_program/pthread_examples/: CMakeLists.txt  README.md  advanced_features.cpp  basic_thread_ops.cpp  pthread_comprehensive_example.cpp  sync_mechanisms.cpp  sync_primitives.cpp  sync_primitives.h  thread_pool.cpp  thread_pool.h  thread_pool_demo.cpp
csrc/memory_pool/: CMAKE_GUIDE.md  CMakeLists.txt  README.md
csrc/memory_pool/benchmarks/: performance_benchmark.cpp
csrc/memory_pool/common/: memory_pool_common.h  visualizer.h
csrc/memory_pool/example/: advance_pool_allocator.h  advance_stl_integration.cpp  advance_thread_safe_pool.h  base_memory_leak_patterns.cpp  base_raw_pointer_lifecycle.cpp  base_raw_pointer_lifecycle_2.cpp  base_smart_pointers.cpp  base_smart_pointers_2.cpp  intermediate_fixed_block_pool.h  intermediate_fixed_block_pool_example.cpp  intermediate_fixed_size_pool.cpp  intermediate_fixed_size_pool.h  intermediate_stack_allocator.h  intermediate_stack_allocator_example.cpp
csrc/memory_pool/tests/: alignment_demo.cpp  fixed_size_pool_test.cpp  memory_pool_tests.cpp
csrc/openmp/: CMakeLists.txt  hp.cpp  openmp_data_sharing_examples.cpp  openmp_use_parallel.cpp
csrc/spdlog_example/: CMakeLists.txt
csrc/techniques/: CMakeLists.txt
csrc/techniques/c_polymorphism/: CMakeLists.txt  c_polymorphism_demo.c  shape.c  shape.h
csrc/techniques/heap_only_create/: heap_only.cpp  heap_only.h
csrc/techniques/no_main_executable/: CMakeLists.txt  README.md  main.cpp  main_provider.cpp
csrc/techniques/stack_only_create/: stack_only.cpp
csrc/third_party_examples/: CMakeLists.txt
csrc/third_party_examples/spdlog_example/: CMakeLists.txt  README.md  spdlog_example.cpp
markdown/: edge浏览器收藏夹_2025_12_28.html  stack-vs-heap.md
python/: README_model_test.md  USAGE_GUIDE.md  arm_server.py  parse_results.py  x86_client.py
tests/: common.hpp
tests/unittest/: CMakeLists.txt  common.hpp  test_heap_only.cpp
