
file(GLOB BASIC_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp")
if(BASIC_SRCS)
    foreach(src IN LISTS BASIC_SRCS)
        get_filename_component(src_name ${src} NAME_WE)
        set(bin_name "design_patterns_${src_name}")
        add_executable(${bin_name} ${src})
        target_include_directories(${bin_name} PRIVATE ${CMAKE_SOURCE_DIR}/csrc ${CMAKE_CURRENT_SOURCE_DIR})
        target_compile_features(${bin_name} PRIVATE cxx_std_17)
    endforeach()
endif()
